[RLS] Apply correct paint offset root for elements that are fixed to the root.

fixed_position_children_fixed_to_root is used to set the paint_offset_root
to a fixed-position element which is not composited but whose transform
is above the scroll of the viewport. This was broken in RLS.

Bug: 793051
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ie4f2a56726ca66663c9bfd1a4a11149385bbf633
Reviewed-on: https://chromium-review.googlesource.com/910075
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535647}
Former-commit-id: 93de7f3a6651079001872768654238bc8e7b4dde